main.js file not sure what what modified in html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>The DOM playground</title>
   <link rel="stylesheet" href="app.css">
-  <script src="app.js"></script>
+
 </head>
 <body>
   <div id="greeting">
-    Hello There!
+    Hello, There!
   </div>
   <hr>
   <div class="content">
@@ -38,5 +38,7 @@
   </div>
 
   <input type="submit" value="Reset" id="reset"></input>
+
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
